main 이미지 수정

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="wrap">
       <div class="page">
         <div class="main_img">
-          <img src="./img/main.png" alt="" />
+          <img src="./img/main4.png" alt="" />
         </div>
         <div class="introduce">
           <div class="introduce_text">
