--- a/detail.html
+++ b/detail.html
@@ -866,7 +866,7 @@
         let commentId = 1;
         if (length > 0)
           commentId = personalData[userId].comments[length - 1].id + 1;
-        console.log(length, commentId);
+        // console.log(length, commentId);
         const tmp = {
           id: commentId,
           message,
