--- a/detail.html
+++ b/detail.html
@@ -937,6 +937,8 @@
       });
 
       // 읽어오는 시간 때문에 1초 후에 제대로 동작함....
+      // 새로 생성 시 생성된 댓글의 수정,삭제 버튼을 감지 못하기 때문에
+      // 함수를 새로 만들어 감지 할 수 있도록 함.
       const buttonHandler = (sec) => {
         setTimeout(() => {
           // 삭제용
