메인 디자인 수정

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         </div>
         <div class="introduce">
           <div class="introduce_text">
-            <p>ABOUT TEAM</p>
-            <p>유일하게 모두 I</p>
+            <div class="round__rec"><p>ABOUT TEAM</p></div>
+            <div><p>유일하게 모두 I지만, 누구보다 열심히</p></div>
           </div>
           <div class="introduce_text">
-            <p>OUR GOAL</p>
-            <p>같이 일하고 싶은 개발자 되기</p>
+            <div class="round__rec"><p>OUR GOAL</p></div>
+            <div><p>같이 밥먹고, 일하고 싶은 개발자 되기</p></div>
           </div>
           <div class="introduce_text">
-            <p>GOUND RULES</p>
+            <div class="round__rec"><p>GOUND RULES</p></div>
             <div>
-              <p>상호 존중하기</p>
-              <p>진행사항 공유하기</p>
-              <p>웃으면서 대화하기</p>
+              <p>상호 존중하고, 대화할 땐 웃으면서, 진행상황 잘 공유하기</p>
+              <!-- <p>진행사항 공유하기</p>
+              <p>웃으면서 대화하기</p> -->
             </div>
           </div>
         </div>
