--- a/detail.html
+++ b/detail.html
@@ -193,7 +193,7 @@
                       <img src="img/yunahong.png" />
                     </div>
                     <div class="user input">
-                      <span class="commentName">복예린님에게 한마디</span>
+                      <span class="commentName">홍유나님에게 한마디</span>
                       <div class="comment">
                         <input
                           class="commentInput main"
@@ -292,7 +292,7 @@
                       <img src="img/junheoklee.png" />
                     </div>
                     <div class="user input">
-                      <span class="commentName">복예린님에게 한마디</span>
+                      <span class="commentName">이준혁님에게 한마디</span>
                       <div class="comment">
                         <input
                           class="commentInput main"
@@ -591,7 +591,7 @@
                       />
                     </div>
                     <div class="user input">
-                      <span class="commentName">복예린님에게 한마디</span>
+                      <span class="commentName">홍유나님에게 한마디</span>
                       <div class="comment">
                         <input
                           class="commentInput main"
@@ -859,18 +859,16 @@
         const target = tmpHTML.querySelector(
           `#user_${idx}_comment_${commentId}`
         );
-        // console.log(target);
-        // bug
-        // 지금 양끝을 서로 하드코딩으로 넣어놔서 양끝에서 삭제하려고하면 이미 삭제했기 때문에 삭제가 안댐.
-        if (target != null) tmpHTML.removeChild(target);
+        tmpHTML.removeChild(target);
       };
 
       // comment 저장(FIREBASE)
       const sendComment = async (db, userId, message) => {
+        
         const length = personalData[userId].comments.length;
         let commentId = 1;
         if (length > 0)
-          commentId = +personalData[userId].comments[length - 1].id + 1;
+          commentId = personalData[userId].comments[length - 1].id + 1;
         // console.log(length, commentId);
         const tmp = {
           id: commentId,
@@ -888,7 +886,7 @@
 
         createChild(message, userId, commentId);
 
-        buttonHandler(100);
+        buttonHandler(300);
       };
       // comment 삭제(FIREBASE)
       const deleteComment = async (buttonId) => {
@@ -904,7 +902,7 @@
         personalData[userId].comments = [...tmp];
         deleteChild(userId, commentId);
 
-        buttonHandler(100);
+        buttonHandler(300);
       };
       // comment 수정(FIREBASE)
       const updateComment = async (message, userId, commentId) => {
@@ -924,6 +922,7 @@
         });
 
         personalData[userId].comments = [...tmp];
+        buttonHandler(300);
       };
 
       // 저장한 개인 데이터를 순회
