--- a/detail.html
+++ b/detail.html
@@ -666,21 +666,26 @@
       };
 
       /** 버튼 클릭 시 슬라이드 되는 스타일 변경을 담당 */
-      const slide = (idx) => {
+      const slide = (idx, init = false) => {
         interaction();
-        setTransition("300ms all ease-in");
+
+        if (init) setTransition("");
+        else setTransition("300ms all ease-in");
 
         setTimeout(() => {
           setTransition("");
         }, 300);
 
         setTranslate();
+        if (idx === 5) idx = 1;
+        else if (idx === 0) idx = 4;
+        history.pushState(null, null, `?page=${idx}`);
       };
 
       const init = () => {
         idx = urlParams.get("page");
         if (idx !== "1") {
-          slide(idx);
+          slide(idx, true);
         }
         setBackGroundColor();
         setTranslate();
@@ -717,6 +722,7 @@
             setTranslate();
           }, 300);
         }
+
         setBackGroundColor();
       });
 
@@ -735,6 +741,7 @@
             setTranslate();
           }, 300);
         }
+
         setBackGroundColor();
       });
 
