--- a/detail.html
+++ b/detail.html
@@ -69,6 +69,9 @@
                 </div>
               </div>
               <div class="right">
+                <a class="close" href="./index.html">
+                  <img src="./img/close.png" alt="">
+                </a>
                 <div class="icons">
                   <button class="icon">
                     <img src="img/yunahong.png" />
@@ -163,6 +166,9 @@
                 </div>
               </div>
               <div class="right">
+                <a class="close" href="./index.html">
+                  <img src="./img/close.png" alt="">
+                </a>
                 <div class="icons">
                   <button class="icon">
                     <img src="img/yunahong.png" />
@@ -262,6 +268,9 @@
                 </div>
               </div>
               <div class="right">
+                <a class="close" href="./index.html">
+                  <img src="./img/close.png" alt="">
+                </a>
                 <div class="icons">
                   <button class="icon">
                     <img src="img/yunahong.png" />
@@ -361,6 +370,9 @@
                 </div>
               </div>
               <div class="right">
+                <a class="close" href="./index.html">
+                  <img src="./img/close.png" alt="">
+                </a>
                 <div class="icons">
                   <button class="icon">
                     <img src="img/yunahong.png" />
@@ -460,6 +472,9 @@
                 </div>
               </div>
               <div class="right">
+                <a class="close" href="./index.html">
+                  <img src="./img/close.png" alt="">
+                </a>
                 <div class="icons">
                   <button class="icon">
                     <img src="img/yunahong.png" />
@@ -559,6 +574,9 @@
                 </div>
               </div>
               <div class="right">
+                <a class="close" href="./index.html">
+                  <img src="./img/close.png" alt="">
+                </a>
                 <div class="icons">
                   <button class="icon">
                     <img src="img/yunahong.png" />
