상세페이지 개별 내용 추가

--- a/detail.html
+++ b/detail.html
@@ -348,23 +348,18 @@
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
                         <div class="tag">INTP</div>
-                        <div class="tag">특징</div>
+                        <div class="tag">관찰하기</div>
                       </div>
                       <div class="aboutMe__tag">
-                        <div class="tag">취미</div>
-                        <div class="tag">관심사</div>
+                        <div class="tag">음악 큐레이션</div>
+                        <div class="tag">브랜딩</div>
                       </div>
                     </div>
                   </div>
                   <div class="workTogether">
                     <span>Let's work together</span>
                     <p>
-                      진짜 음식물이 그에서 반장은 오늘날이며, 당합니다. 피식
-                      물품을 같이 칼날이 가라. 없은 내지 수를, 하게 정도가 삶에
-                      체외가 된 강하던 있어 기쁘어요. 그 대통령은 훌륭하다
-                      늘린다면 생각을 선진이 채우다. 판 부정을 딴 음대가 사노
-                      한편은 건치도 있은데. 인한 생산하면서 마음으로 접던
-                      현실에, 우리에서 요즈음에 너에 사찰을, 시작하다.
+                      아이디어를 제시하고 관련해 함께 이야기하는 것을 좋아해요. 다양한 분야에 관심이 많아 새로운 것을 시도하는데 두려워하지 않고, 선택한 일에 대해서는 끝까지 책임감 있게 맡은 일을 해내려 최대한 노력합니다! 
                     </p>
                   </div>
                 </div>
