--- a/detail.html
+++ b/detail.html
@@ -47,30 +47,28 @@
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
                         <div class="tag">ISFP</div>
-                        <div class="tag">특징</div>
+                        <div class="tag">긍정적인 사람</div>
                       </div>
                       <div class="aboutMe__tag">
-                        <div class="tag">취미</div>
-                        <div class="tag">관심사</div>
+                        <div class="tag">게임 하기</div>
+                        <div class="tag">노래 듣기</div>
                       </div>
                     </div>
                   </div>
                   <div class="workTogether">
                     <span>Let's work together</span>
                     <p>
-                      진짜 음식물이 그에서 반장은 오늘날이며, 당합니다. 피식
-                      물품을 같이 칼날이 가라. 없은 내지 수를, 하게 정도가 삶에
-                      체외가 된 강하던 있어 기쁘어요. 그 대통령은 훌륭하다
-                      늘린다면 생각을 선진이 채우다. 판 부정을 딴 음대가 사노
-                      한편은 건치도 있은데. 인한 생산하면서 마음으로 접던
-                      현실에, 우리에서 요즈음에 너에 사찰을, 시작하다.
+                      처음에는 낯을 많이 가려서 말이 많이 없지만 친해지면 말이
+                      많아집니다. 먼저 나서는 성격은 아니지만 맡은 일은 언제나
+                      책임감을 가지고 끝마칩니다. 모르는 게 있어도 어떻게든 답을
+                      찾아내어 해결해 냅니다.
                     </p>
                   </div>
                 </div>
               </div>
               <div class="right">
                 <a class="close" href="./index.html">
-                  <img src="./img/close.png" alt="">
+                  <img src="./img/close.png" alt="" />
                 </a>
                 <div class="icons">
                   <button class="icon">
@@ -159,15 +157,17 @@
                   <div class="workTogether">
                     <span>Let's work together</span>
                     <p>
-                      먼저 앞장서서 사람들을 이끌거나 아이디어를 내는 스타일은 아니지만 항상 팀원들의 의견을 존중하고 경청하고 있습니다!
-                      프로젝트를 진행할 때 잘하지는 못하더라도 늘 최선을 다하려고 합니다 (〃⌒▽⌒〃)ゝ
+                      먼저 앞장서서 사람들을 이끌거나 아이디어를 내는 스타일은
+                      아니지만 항상 팀원들의 의견을 존중하고 경청하고 있습니다!
+                      프로젝트를 진행할 때 잘하지는 못하더라도 늘 최선을
+                      다하려고 합니다 (〃⌒▽⌒〃)ゝ
                     </p>
                   </div>
                 </div>
               </div>
               <div class="right">
                 <a class="close" href="./index.html">
-                  <img src="./img/close.png" alt="">
+                  <img src="./img/close.png" alt="" />
                 </a>
                 <div class="icons">
                   <button class="icon">
@@ -269,7 +269,7 @@
               </div>
               <div class="right">
                 <a class="close" href="./index.html">
-                  <img src="./img/close.png" alt="">
+                  <img src="./img/close.png" alt="" />
                 </a>
                 <div class="icons">
                   <button class="icon">
@@ -359,14 +359,17 @@
                   <div class="workTogether">
                     <span>Let's work together</span>
                     <p>
-                      아이디어를 제시하고 관련해 함께 이야기하는 것을 좋아해요. 다양한 분야에 관심이 많아 새로운 것을 시도하는데 두려워하지 않고, 선택한 일에 대해서는 끝까지 책임감 있게 맡은 일을 해내려 최대한 노력합니다! 
+                      아이디어를 제시하고 관련해 함께 이야기하는 것을 좋아해요.
+                      다양한 분야에 관심이 많아 새로운 것을 시도하는데
+                      두려워하지 않고, 선택한 일에 대해서는 끝까지 책임감 있게
+                      맡은 일을 해내려 최대한 노력합니다!
                     </p>
                   </div>
                 </div>
               </div>
               <div class="right">
                 <a class="close" href="./index.html">
-                  <img src="./img/close.png" alt="">
+                  <img src="./img/close.png" alt="" />
                 </a>
                 <div class="icons">
                   <button class="icon">
@@ -445,30 +448,28 @@
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
                         <div class="tag">ISFP</div>
-                        <div class="tag">특징</div>
+                        <div class="tag">긍정적인 사람</div>
                       </div>
                       <div class="aboutMe__tag">
-                        <div class="tag">취미</div>
-                        <div class="tag">관심사</div>
+                        <div class="tag">게임 하기</div>
+                        <div class="tag">노래 듣기</div>
                       </div>
                     </div>
                   </div>
                   <div class="workTogether">
                     <span>Let's work together</span>
                     <p>
-                      진짜 음식물이 그에서 반장은 오늘날이며, 당합니다. 피식
-                      물품을 같이 칼날이 가라. 없은 내지 수를, 하게 정도가 삶에
-                      체외가 된 강하던 있어 기쁘어요. 그 대통령은 훌륭하다
-                      늘린다면 생각을 선진이 채우다. 판 부정을 딴 음대가 사노
-                      한편은 건치도 있은데. 인한 생산하면서 마음으로 접던
-                      현실에, 우리에서 요즈음에 너에 사찰을, 시작하다.
+                      처음에는 낯을 많이 가려서 말이 많이 없지만 친해지면 말이
+                      많아집니다. 먼저 나서는 성격은 아니지만 맡은 일은 언제나
+                      책임감을 가지고 끝마칩니다. 모르는 게 있어도 어떻게든 답을
+                      찾아내어 해결해 냅니다.
                     </p>
                   </div>
                 </div>
               </div>
               <div class="right">
                 <a class="close" href="./index.html">
-                  <img src="./img/close.png" alt="">
+                  <img src="./img/close.png" alt="" />
                 </a>
                 <div class="icons">
                   <button class="icon">
@@ -530,13 +531,11 @@
                   </div>
                   <div class="profile__content">
                     <span class="item">E-mail 📧</span>
-                    <span class="item__value">yelini9060@naver.com</span>
+                    <span class="item__value">ghddbsk12@naver.com</span>
                   </div>
                   <div class="profile__content">
                     <span class="item">Blog 🏷</span>
-                    <span class="item__value"
-                      >https://velog.io/@liin/posts</span
-                    >
+                    <span class="item__value">https://github.com/yuna-hh</span>
                   </div>
                 </div>
               </div>
@@ -546,31 +545,29 @@
                     <div>About me</div>
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
-                        <div class="tag">INTP</div>
-                        <div class="tag">특징</div>
+                        <div class="tag">INFP</div>
+                        <div class="tag">올빼미형 인간</div>
                       </div>
                       <div class="aboutMe__tag">
-                        <div class="tag">취미</div>
-                        <div class="tag">관심사</div>
+                        <div class="tag">노래 듣기</div>
+                        <div class="tag">고양이 구경하기</div>
                       </div>
                     </div>
                   </div>
                   <div class="workTogether">
                     <span>Let's work together</span>
                     <p>
-                      진짜 음식물이 그에서 반장은 오늘날이며, 당합니다. 피식
-                      물품을 같이 칼날이 가라. 없은 내지 수를, 하게 정도가 삶에
-                      체외가 된 강하던 있어 기쁘어요. 그 대통령은 훌륭하다
-                      늘린다면 생각을 선진이 채우다. 판 부정을 딴 음대가 사노
-                      한편은 건치도 있은데. 인한 생산하면서 마음으로 접던
-                      현실에, 우리에서 요즈음에 너에 사찰을, 시작하다.
+                      먼저 앞장서서 사람들을 이끌거나 아이디어를 내는 스타일은
+                      아니지만 항상 팀원들의 의견을 존중하고 경청하고 있습니다!
+                      프로젝트를 진행할 때 잘하지는 못하더라도 늘 최선을
+                      다하려고 합니다 (〃⌒▽⌒〃)ゝ
                     </p>
                   </div>
                 </div>
               </div>
               <div class="right">
                 <a class="close" href="./index.html">
-                  <img src="./img/close.png" alt="">
+                  <img src="./img/close.png" alt="" />
                 </a>
                 <div class="icons">
                   <button class="icon">
@@ -880,7 +877,6 @@
 
       // comment 저장(FIREBASE)
       const sendComment = async (db, userId, message) => {
-        
         const length = personalData[userId].comments.length;
         let commentId = 1;
         if (length > 0)
