--- a/detail.html
+++ b/detail.html
@@ -246,23 +246,20 @@
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
                         <div class="tag">ISTJ</div>
-                        <div class="tag">특징</div>
+                        <div class="tag">계획 짜는거 좋아함</div>
                       </div>
                       <div class="aboutMe__tag">
-                        <div class="tag">취미</div>
-                        <div class="tag">관심사</div>
+                        <div class="tag">여행</div>
+                        <div class="tag">맛집 투어</div>
                       </div>
                     </div>
                   </div>
                   <div class="workTogether">
                     <span>Let's work together</span>
                     <p>
-                      진짜 음식물이 그에서 반장은 오늘날이며, 당합니다. 피식
-                      물품을 같이 칼날이 가라. 없은 내지 수를, 하게 정도가 삶에
-                      체외가 된 강하던 있어 기쁘어요. 그 대통령은 훌륭하다
-                      늘린다면 생각을 선진이 채우다. 판 부정을 딴 음대가 사노
-                      한편은 건치도 있은데. 인한 생산하면서 마음으로 접던
-                      현실에, 우리에서 요즈음에 너에 사찰을, 시작하다.
+                      처음 보는 사람들과 팀 프로젝트 하는 걸 즐깁니다! 
+                      저와 함께하는 팀원들과의 협업을 통해 함께 성장하고 
+                      재미있게 팀 프로젝트를 진행하여 멋진 결과물을 만들어내길 기대하고 있습니다! 
                     </p>
                   </div>
                 </div>
